# FmaX

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md
FmaX/: fltflt.f90  vfma.f90.fypp  vfma_helpers.py
ouxmix/: CMakeLists.txt  fltflt.f90  mod_ffp.f90  mod_ffp_eft.f90
test/: CMakeLists.txt  plot_ffp.py  test_add.f90  test_bench.f90  test_cmp.f90  test_div.f90  test_dot.f90  test_extra.f90  test_fma.f90  test_math.f90  test_mul.f90  test_sub.f90
tutorial/: CMakeLists.txt  tut_add.f90  tut_add_r8.f90  tut_div.f90  tut_div_r8.f90  tut_dot3.f90  tut_mul.f90  tut_mul_r8.f90  tut_sub.f90  tut_sub_r8.f90
tutorial/add/: Makefile  tut_add.f90
tutorial/div/: Makefile  tut_div.f90
tutorial/mul/: Makefile  tut_mul.f90
tutorial/sub/: Makefile  tut_sub.f90
tutorial/vfma/: Makefile  tut_vfma.f90  tut_vfma.f90.fypp
